--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Brian Ramirez 2015</span>
+                    <span class="copyright">Copyright &copy; Brian Ramirez 2015 V2.0</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
