--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
 
 </head>
 
-<body id="home" class="index">
 
+
+<body id="home" class="index">
 
 
 
@@ -111,10 +112,12 @@
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
+        <div class="alert alert-danger" role="alert"><b>Hello Visitor!</b> Lancer Art has been archived and is no longer supported, but feel free to scroll through the archive.</div>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Feed</h2>
                     <h3 class="section-subheading text-muted">Latest Works of Art</h3>
+
                 </div>
             </div>
 
@@ -306,8 +309,8 @@
                 </div>
                 
             </div>
-            <a href="http://www.easycounter.com/">
-<img src="http://www.easycounter.com/counter.php?soratakun"
+            <a href="https://www.easycounter.com/">
+<img src="https://www.easycounter.com/counter.php?soratakun"
 border="0" alt="Web Site Hit Counters"></a>
 
         </div>
